feat: better animation performance

--- a/Game/Script/Styling/Components/Transitions.css
+++ b/Game/Script/Styling/Components/Transitions.css
@@ -18,6 +18,7 @@
     position: relative;
     display: inline-block;
     text-transform: uppercase;
+    will-change: transform;
     transition: all 0.5s ease-in;
     animation-name:             transition-animation; 
     animation-duration:         1s; 
