--- a/Game/Script/Styling/Components/Transitions.css
+++ b/Game/Script/Styling/Components/Transitions.css
@@ -19,18 +19,21 @@
     display: inline-block;
     text-transform: uppercase;
     will-change: transform;
-    transition: all 0.5s ease-in;
     animation-name:             transition-animation; 
-    animation-duration:         1s; 
+    animation-duration:         2s; 
     animation-iteration-count:  infinite;
-    animation-timing-function:  linear; 
+    animation-timing-function:  ease-in-out; 
 }
 
 @keyframes transition-animation {
-    0%, 100% {
-        transform: scale(100%);
-    }  
-    50% { 
-        transform: scale(90%);
-    }
+    0%                      
+    { transform: rotateY( 90deg); }
+    25%                     
+    { transform: rotateY( 0deg); }
+    50%                     
+    { transform: rotateY( -90deg); }
+    75%                     
+    { transform: rotateY( 0deg); }
+    100%                    
+    { transform: rotateY( 90deg); }
   }
