--- a/Game/Script/Styling/Components/Transitions.css
+++ b/Game/Script/Styling/Components/Transitions.css
@@ -20,20 +20,16 @@
     text-transform: uppercase;
     will-change: transform;
     animation-name:             transition-animation; 
-    animation-duration:         2s; 
+    animation-duration:         1s; 
     animation-iteration-count:  infinite;
     animation-timing-function:  ease-in-out; 
 }
 
 @keyframes transition-animation {
-    0%                      
-    { transform: rotateY( 90deg); }
-    25%                     
-    { transform: rotateY( 0deg); }
-    50%                     
-    { transform: rotateY( -90deg); }
-    75%                     
-    { transform: rotateY( 0deg); }
-    100%                    
-    { transform: rotateY( 90deg); }
+    0%, 100% {
+        transform: scale(100%);
+    }
+    50% {
+        transform: scale(50%);
+    }
   }
