feat: make animation container simpler

--- a/Game/Script/Styling/Components/Transitions.css
+++ b/Game/Script/Styling/Components/Transitions.css
@@ -14,7 +14,7 @@
     font-family: var(--main_font);
 }
   
-.startTransitionContainer span {
+#startTransitionText_id {
     position: relative;
     display: inline-block;
     text-transform: uppercase;
